--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Meta tags for search engine-->
+    <meta name="description" content="kaizen fitness, gym for people with a drive for continous improvement, gym in south london, qualified highly experienced traininers">
+    <meta name="keywords" content="kaizen fitness, all ages, workout, affordable, stay healthy">
     <!--Title-->
     <title>Kaizen fitness</title>
     <!--Favicon-->
