I created general page structure

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     <link rel="icon" sizes="16x16" href="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/favicon_io/favicon-16x16.png">
 </head>
 <body>
-    
+    <!--Header-->
+    <header>Header</header>
+
+    <!--Main content-->
+    <main>main</main>
+
+    <!--Footer-->
+    <footer>Footer</footer>
 </body>
 </html>
