added css folder, stylesheet, basic starter css styles

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/favicon_io/apple-touch-icon.png">
     <link rel="icon" sizes="32x32"  href="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/favicon_io/favicon-32x32.png">
     <link rel="icon" sizes="16x16" href="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/favicon_io/favicon-16x16.png">
+    <!--Stylesheet-->
+    <link rel="stylesheet" href="assests/css/style.css">
 </head>
 <body>
     <!--Header-->
     <header>Header</header>
 
     <!--Main content-->
-    <main>main</main>
+    <main>Main</main>
 
     <!--Footer-->
     <footer>Footer</footer>
