--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <!--Header-->
-    <header>Header</header>
+    <header><a href="index.html"><h1 id="heading">kaizen fitness</h1></a></header>
 
     <!--Main content-->
     <main>Main</main>
