--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
 </head>
 <body>
     <!--Header-->
-    <header><a href="index.html"><h1 id="heading">kaizen fitness</h1></a></header>
+    <header>
+        <a href="index.html"><h1 id="heading">kaizen fitness</h1></a>
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <!--Main content-->
     <main>Main</main>
