--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <header>
         <a href="index.html"><h1 id="heading">kaizen fitness</h1></a>
         <nav>
-            <ul>
-                <li><a href="">Home</a></li>
+            <ul id="navmenu">
+                <li><a href="" id="locate">Home</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
