Added functionality to navbar and pushed the main element down

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <!--Header-->
     <header>
         <a href="index.html"><h1 id="heading">kaizen fitness</h1></a>
+        <input type="checkbox" id="nav-toggler" name="nav-toggler">
+        <label for="nav-toggler" class="nav-toggler-label">x</label>
         <nav>
             <ul id="navmenu">
                 <li><a href="" id="locate">Home</a></li>
@@ -35,5 +37,6 @@
 
     <!--Footer-->
     <footer>Footer</footer>
+    <script src="https://kit.fontawesome.com/b49503b66d.js" crossorigin="anonymous"></script>
 </body>
 </html>
