Added the code from the index html to content.html and about.html files and changed the locate styling id to specify and help the user know which page of the website they are in

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <nav>
             <ul id="navmenu">
                 <li><a href="" id="locate">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
