Added hero section and made it responsive

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <label for="nav-toggler" class="nav-toggler-label"><i class="fa-solid fa-bars" ></i></label>
         <nav>
             <ul id="navmenu">
-                <li><a href="" id="locate">Home</a></li>
+                <li><a href="index.html" id="locate">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -33,7 +33,10 @@
     </header>
 
     <!--Main content-->
-    <main>Main</main >
+    <main><section id="hero-image">
+        <Div id="hero-section"><h1>Kaizen Fitness</h1>
+        <p>Embark on a transformative fitness journey with Kaizen Fitness. Elevate your well-being through progressive workouts, personalized plans, and a community dedicated to constant improvement. Your path to a healthier, stronger you starts here.</p></Div>
+    </section></main >
 
     <!-- Added hr element to seperate the footer and the the main element-->
     <hr class="hrstyle">
