--- a/index.html
+++ b/index.html
@@ -1,64 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Meta tags for search engine-->
-    <meta name="description" content="kaizen fitness, gym for people with a drive for continous improvement, gym in south london, qualified highly experienced traininers">
-    <meta name="keywords" content="kaizen fitness, all ages, workout, affordable, stay healthy">
+    <meta
+      name="description"
+      content="kaizen fitness, gym for people with a drive for continous improvement, gym in south london, qualified highly experienced traininers"
+    />
+    <meta
+      name="keywords"
+      content="kaizen fitness, all ages, workout, affordable, stay healthy"
+    />
     <!--Title-->
     <title>Kaizen fitness</title>
     <!--Favicon-->
-    <link rel="android-chrome-192x192" sizes="192x192" href="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/favicon_io/android-chrome-192x192.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/favicon_io/apple-touch-icon.png">
-    <link rel="icon" sizes="32x32"  href="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/favicon_io/favicon-32x32.png">
-    <link rel="icon" sizes="16x16" href="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/favicon_io/favicon-16x16.png">
+    <link
+      rel="android-chrome-192x192"
+      sizes="192x192"
+      href="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/favicon_io/android-chrome-192x192.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      sizes="32x32"
+      href="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      sizes="16x16"
+      href="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/favicon_io/favicon-16x16.png"
+    />
     <!--Stylesheet-->
-    <link rel="stylesheet" href="assests/css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="assests/css/style.css" />
+  </head>
+  <body>
     <!--Header-->
     <header>
-        <a href="index.html"><h1 id="heading">kaizen fitness</h1></a>
-        <input type="checkbox" id="nav-toggler" name="nav-toggler">
-        <label for="nav-toggler" class="nav-toggler-label"><i class="fa-solid fa-bars" ></i></label>
-        <nav>
-            <ul id="navmenu">
-                <li><a href="index.html" id="locate">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+      <a href="index.html"><h1 id="heading">kaizen fitness</h1></a>
+      <input type="checkbox" id="nav-toggler" name="nav-toggler" />
+      <label for="nav-toggler" class="nav-toggler-label"
+        ><i class="fa-solid fa-bars"></i
+      ></label>
+      <nav>
+        <ul id="navmenu">
+          <li><a href="index.html" id="locate">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
     </header>
 
     <!--Main content-->
-    <main><section id="hero-image">
-        <Div id="hero-section"><h1>Kaizen Fitness</h1>
-        <p>Embark on a transformative fitness journey with Kaizen Fitness. Elevate your well-being through progressive workouts, personalized plans, and a community dedicated to constant improvement. Your path to a healthier, stronger you starts here.</p></Div>
-    </section></main >
+    <main>
+      <section id="hero-image">
+        <div id="hero-section"><h1>Kaizen Fitness</h1>
+          <p>
+            Embark on a transformative fitness journey with Kaizen Fitness.
+            Elevate your well-being through progressive workouts, personalized
+            plans, and a community dedicated to constant improvement. Your path
+            to a healthier, stronger you starts here.
+          </p></section></div>
+      </section>
+
+      <div id="section-grey"><section id="section-about"><h2>About kaizen fitness</h2>
+      <p>Welcome to Kaizen Fitness, where our fitness journey began in year 1980 by miyomutoto musashi. Our commitment to your well-being goes beyond just workouts. The word Kaizen is a philosophy of continuous improvement. Kaizen Fitness is not just a gym it's a community that thrives on progress. Join us in sculpting a healthier, stronger, and happier version of yourself.
+      </p></section>
+
+      <section id="section-qualification"><h2>Highly Qualified Trainers</h2>
+      <p>At Kaizen Fitness, our team of trainers is more than just instructors they are mentors on your fitness journey. Each trainer brings a wealth of expertise, passion, and dedication to guide you towards your fitness goals. We believe in quality training, personalized for you. With our highly qualified trainers by your side, achieving your fitness aspirations becomes an inspiring and achievable reality.</p></div></section>
+      <div id="msection-offer">
+        <section id="section-whatweoffer">
+            <h2>What We Offer</h2>
+        </section>
+        <section id="section-equipment">
+            <img src="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/images/Gym Equipment.avif" alt="">
+            <h3>Gym Equipment</h3>
+            <p>Elevate Your Workouts with State-of-the-Art Gym Equipment at Kaizen Fitness! Our fitness haven is equipped with cutting-edge gym equipment designed to enhance every aspect of your training. From cardio machines to strength training apparatus, our carefully curated selection ensures you have the tools to push your limits and achieve your fitness goals. Experience the synergy of technology and performance in a dynamic environment where every rep counts. Join Kaizen Fitness and unleash the full potential of your workouts with the latest and most advanced gym equipment available.</p>
+        </section>
+        <section id="section-assessments">
+            <img src="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/images/fitness assessment.jpeg" alt="">
+            <h3>FITNESS ASSESSMENTS</h3>
+            <p>At Kaizen Fitness, we believe in tailoring your fitness journey to your unique needs. Our thorough fitness assessments go beyond the surface, providing a detailed understanding of your strengths, areas for improvement, and personalized goals. By combining cutting-edge assessments with expert guidance, we pave the way for a targeted and effective fitness plan designed just for you. Take the first step towards a healthier you with our transformative fitness assessments at Kaizen Fitness.</p>
+        </section>
+        <section id="section-personal">
+            <img src="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/images/personal training.jpeg" alt="">
+            <h3>PERSONAL TRAINING</h3>
+            <p>Experience Personalized Excellence with Kaizen Fitness Personal Training! Elevate your fitness journey with our dedicated personal training sessions, where our certified trainers tailor every workout to match your goals, fitness level, and preferences. At Kaizen Fitness, we believe in the power of individualized guidance, ensuring each session is a step towards your unique fitness aspirations. Our experienced trainers bring motivation, expertise, and a personalized touch to every workout, creating a supportive environment where your success becomes inevitable. Unleash your potential with Kaizen Fitness Personal Training because your fitness journey is as unique as you are.</p>
+        </section>
+        <section id="section-nutrition">
+            <img src="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/images/nutrition coaching.jpeg" alt="">
+            <h3>NUTRITIONAL COACHING</h3>
+            <p>Fuel Your Success with Kaizen Fitness Nutrition Coaching! Discover a holistic approach to well-being with our nutrition coaching services. At Kaizen Fitness, we understand that true fitness extends beyond workouts, and nutrition plays a pivotal role. Our certified nutrition coaches work with you to create a personalized plan that aligns with your fitness goals, lifestyle, and dietary preferences. From meal planning to insightful guidance, we empower you to make sustainable, health-conscious choices. Elevate your journey to a healthier, more vibrant you with Kaizen Fitness Nutrition Coaching because good nutrition is the foundation of a stronger, happier life.</p>
+        </section>
+      </div>
+    </main>
 
     <!-- Added hr element to seperate the footer and the the main element-->
-    <hr class="hrstyle">
+    <hr class="hrstyle"/>
 
     <!--Footer-->
     <footer>
-        <div id="thefooter">
-            <h3 class="suii">Contact us</h3>
-              <ul id="ul2">
-                <li>
-                  <a href="mail.to:kaizenfitness@kz.ac.uk">Email us</a><i class="fa-solid fa-envelope"></i>
-                </li>
-                <li>
-                  <a href="tel:+4407756311939">Call us <i class="fa-solid fa-phone"></i></a>
-                </li>
-               </ul></div>
-        <div id="hefooter"><h3 class="sui">Social Media links</h3> 
-              <ul id="social-media">
-                <li><a href="https://www.linkedin.com/in/abdiqani-warsame-2977a8255/" target="_blank" rel="noopener" aria-label="Visit my linkelin page( opens in new tab)"><i class="fa-brands fa-linkedin"></i></a></li>
-                <li><a href="https://github.com/yangkai004" target="_blank" rel="noopener" aria-label="Visit my Github page (opens in new tab)"><i class="fa-brands fa-github"></i></a></li>
-              </ul></div>
-</footer>
-    <script src="https://kit.fontawesome.com/b49503b66d.js" crossorigin="anonymous"></script>
-</body>
+      <div id="thefooter">
+        <h3 class="suii">Contact us</h3>
+        <ul id="ul2">
+          <li>
+            <a href="mail.to:kaizenfitness@kz.ac.uk">Email us</a><i class="fa-solid fa-envelope"></i>
+          </li>
+          <li>
+            <a href="tel:+4407756311939"
+              >Call us <i class="fa-solid fa-phone"></i
+            ></a>
+          </li>
+        </ul>
+      </div>
+      <div id="hefooter">
+        <h3 class="sui">Social Media links</h3>
+        <ul id="social-media">
+          <li>
+            <a
+              href="https://www.linkedin.com/in/abdiqani-warsame-2977a8255/"
+              target="_blank"
+              rel="noopener"
+              aria-label="Visit my linkelin page( opens in new tab)"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
+          </li>
+          <li>
+            <a
+              href="https://github.com/yangkai004"
+              target="_blank"
+              rel="noopener"
+              aria-label="Visit my Github page (opens in new tab)"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+    <script
+      src="https://kit.fontawesome.com/b49503b66d.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
