I added some of the content that were in the home page to the about and then a faqs at the bottom of the about page just above the footer

--- a/about.html
+++ b/about.html
@@ -33,7 +33,61 @@
     </header>
 
     <!--Main content-->
-    <main>Main</main >
+    <main>
+        <div id="msection-offer">
+            <section id="section-whatweoffer">
+                <h2>What We Offer</h2>
+            </section>
+            <section id="section-equipment">
+                <img src="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/images/Gym Equipment.avif" alt="">
+                <h3>Gym Equipment</h3>
+                <p>Elevate Your Workouts with State-of-the-Art Gym Equipment at Kaizen Fitness! Our fitness haven is equipped with cutting-edge gym equipment designed to enhance every aspect of your training. From cardio machines to strength training apparatus, our carefully curated selection ensures you have the tools to push your limits and achieve your fitness goals. Experience the synergy of technology and performance in a dynamic environment where every rep counts. Join Kaizen Fitness and unleash the full potential of your workouts with the latest and most advanced gym equipment available.</p>
+            </section>
+            <section id="section-assessments">
+                <img src="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/images/fitness assessment.jpeg" alt="">
+                <h3>FITNESS ASSESSMENTS</h3>
+                <p>At Kaizen Fitness, we believe in tailoring your fitness journey to your unique needs. Our thorough fitness assessments go beyond the surface, providing a detailed understanding of your strengths, areas for improvement, and personalized goals. By combining cutting-edge assessments with expert guidance, we pave the way for a targeted and effective fitness plan designed just for you. Take the first step towards a healthier you with our transformative fitness assessments at Kaizen Fitness.</p>
+            </section>
+            <section id="section-personal">
+                <img src="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/images/personal training.jpeg" alt="">
+                <h3>PERSONAL TRAINING</h3>
+                <p>Experience Personalized Excellence with Kaizen Fitness Personal Training! Elevate your fitness journey with our dedicated personal training sessions, where our certified trainers tailor every workout to match your goals, fitness level, and preferences. At Kaizen Fitness, we believe in the power of individualized guidance, ensuring each session is a step towards your unique fitness aspirations. Our experienced trainers bring motivation, expertise, and a personalized touch to every workout, creating a supportive environment where your success becomes inevitable. Unleash your potential with Kaizen Fitness Personal Training because your fitness journey is as unique as you are.</p>
+            </section>
+            <section id="section-nutrition">
+                <img src="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/images/nutrition coaching.jpeg" alt="">
+                <h3>NUTRITIONAL COACHING</h3>
+                <p>Fuel Your Success with Kaizen Fitness Nutrition Coaching! Discover a holistic approach to well-being with our nutrition coaching services. At Kaizen Fitness, we understand that true fitness extends beyond workouts, and nutrition plays a pivotal role. Our certified nutrition coaches work with you to create a personalized plan that aligns with your fitness goals, lifestyle, and dietary preferences. From meal planning to insightful guidance, we empower you to make sustainable, health-conscious choices. Elevate your journey to a healthier, more vibrant you with Kaizen Fitness Nutrition Coaching because good nutrition is the foundation of a stronger, happier life.</p>
+            </section>
+          </div>
+        <div>
+            <section id="faqs">
+                <details>
+                  <summary>How do I sign up for a membership?</summary>
+                <p>Signing up for a Kaizen Fitness membership is easy! Visit our Membership Page, choose a plan that suits your goals, and follow the simple registration process.</p></details>
+            
+            </section>
+            <section id="faqs">
+                <details>
+                  <summary>What types of training programs do you offer?</summary>
+                  <p>At Kaizen Fitness, we offer a variety of training programs tailored to different fitness levels and goals. From strength training to specialized classes, our programs cater to a diverse range of needs.</p>
+                </details>
+            </section>
+
+            <section id="faqs">
+                <details>
+                  <summary> Can I get a personalized workout plan?</summary>
+                  <p>Absolutely! Our experienced trainers will work with you to create a personalized workout plan based on your fitness level, goals, and preferences. Your fitness journey is unique, and so is your plan.</p>
+                </details>
+            </section>
+
+            <section id="faqs">
+                <details>
+                    <summary>Are there nutritional coaching services?</summary>
+                    <p>Yes, we provide nutrition coaching services. Our certified nutrition coaches will assist you in creating a personalized nutrition plan that complements your fitness goals.</p>
+                </details>
+            </section>
+        </div>
+    </main >
 
     <!-- Added hr element to seperate the footer and the the main element-->
     <hr class="hrstyle">
@@ -56,6 +110,6 @@
                 <li><a href="https://github.com/yangkai004" target="_blank" rel="noopener" aria-label="Visit my Github page (opens in new tab)"><i class="fa-brands fa-github"></i></a></li>
               </ul></div>
 </footer>
-    <script src="https://kit.fontawesome.com/b49503b66d.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/b49503b66d.js" crossorigin="anonymous"></script>
 </body>
 </html>
