--- a/index.html
+++ b/index.html
@@ -74,31 +74,6 @@
 
       <section id="section-qualification"><h2>Highly Qualified Trainers</h2>
       <p>At Kaizen Fitness, our team of trainers is more than just instructors they are mentors on your fitness journey. Each trainer brings a wealth of expertise, passion, and dedication to guide you towards your fitness goals. We believe in quality training, personalized for you. With our highly qualified trainers by your side, achieving your fitness aspirations becomes an inspiring and achievable reality.</p></div></section>
-      <div id="msection-offer">
-        <section id="section-whatweoffer">
-            <h2>What We Offer</h2>
-        </section>
-        <section id="section-equipment">
-            <img src="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/images/Gym Equipment.avif" alt="">
-            <h3>Gym Equipment</h3>
-            <p>Elevate Your Workouts with State-of-the-Art Gym Equipment at Kaizen Fitness! Our fitness haven is equipped with cutting-edge gym equipment designed to enhance every aspect of your training. From cardio machines to strength training apparatus, our carefully curated selection ensures you have the tools to push your limits and achieve your fitness goals. Experience the synergy of technology and performance in a dynamic environment where every rep counts. Join Kaizen Fitness and unleash the full potential of your workouts with the latest and most advanced gym equipment available.</p>
-        </section>
-        <section id="section-assessments">
-            <img src="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/images/fitness assessment.jpeg" alt="">
-            <h3>FITNESS ASSESSMENTS</h3>
-            <p>At Kaizen Fitness, we believe in tailoring your fitness journey to your unique needs. Our thorough fitness assessments go beyond the surface, providing a detailed understanding of your strengths, areas for improvement, and personalized goals. By combining cutting-edge assessments with expert guidance, we pave the way for a targeted and effective fitness plan designed just for you. Take the first step towards a healthier you with our transformative fitness assessments at Kaizen Fitness.</p>
-        </section>
-        <section id="section-personal">
-            <img src="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/images/personal training.jpeg" alt="">
-            <h3>PERSONAL TRAINING</h3>
-            <p>Experience Personalized Excellence with Kaizen Fitness Personal Training! Elevate your fitness journey with our dedicated personal training sessions, where our certified trainers tailor every workout to match your goals, fitness level, and preferences. At Kaizen Fitness, we believe in the power of individualized guidance, ensuring each session is a step towards your unique fitness aspirations. Our experienced trainers bring motivation, expertise, and a personalized touch to every workout, creating a supportive environment where your success becomes inevitable. Unleash your potential with Kaizen Fitness Personal Training because your fitness journey is as unique as you are.</p>
-        </section>
-        <section id="section-nutrition">
-            <img src="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/images/nutrition coaching.jpeg" alt="">
-            <h3>NUTRITIONAL COACHING</h3>
-            <p>Fuel Your Success with Kaizen Fitness Nutrition Coaching! Discover a holistic approach to well-being with our nutrition coaching services. At Kaizen Fitness, we understand that true fitness extends beyond workouts, and nutrition plays a pivotal role. Our certified nutrition coaches work with you to create a personalized plan that aligns with your fitness goals, lifestyle, and dietary preferences. From meal planning to insightful guidance, we empower you to make sustainable, health-conscious choices. Elevate your journey to a healthier, more vibrant you with Kaizen Fitness Nutrition Coaching because good nutrition is the foundation of a stronger, happier life.</p>
-        </section>
-      </div>
     </main>
 
     <!-- Added hr element to seperate the footer and the the main element-->
@@ -110,7 +85,8 @@
         <h3 class="suii">Contact us</h3>
         <ul id="ul2">
           <li>
-            <a href="mail.to:kaizenfitness@kz.ac.uk">Email us</a><i class="fa-solid fa-envelope"></i>
+            <a href="mail.to:kaizenfitness@kz.ac.uk">Email us</a
+><i class="fa-solid fa-envelope"></i>
           </li>
           <li>
             <a href="tel:+4407756311939"
