I did the form and address part of the contact page

--- a/contact.html
+++ b/contact.html
@@ -57,8 +57,20 @@
     </header>
 
     <!--Main content-->
-    <main>Main</main>
-
+    <main>
+      <div id="contact">
+        <section id="contact-address"><h2><strong>Address</strong></h2>
+          <p>1 my street</p>
+          <p>My village</p>
+          <p>BOURNEMOUTH</p>
+          <p>BH1 1AA</p></section>
+      
+      
+        <section id="contact-form">
+          <input type="email" name="formly" placeholder="Type in email" required>
+          <input type="password" name="formly" placeholder="Type in password" required>
+          <button>submit form</button></section>
+      </div>
     <!-- Added hr element to seperate the footer and the the main element-->
     <hr class="hrstyle" />
 
