--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     href="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/favicon_io/favicon-32x32.png" />
   <link rel="icon" sizes="16x16"
     href="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/favicon_io/favicon-16x16.png" />
-  <!--Stylesheet-->
+  
+    <!--Stylesheet-->
+    <link rel="icons" href="assests/fontawesome-free-6.4.2-web/css/fontawesome.csss">
+    <!--Stylesheet-->
   <link rel="stylesheet" href="assests/css/style.css" />
 </head>
 
@@ -106,6 +109,6 @@
       </ul>
     </div>
   </footer>
-  <script src="https://kit.fontawesome.com/b49503b66d.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
