I worked more on the responsiveness of the header, main, footer elements to make it responsive at any screen size

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
     </header>
 
     <!--Main content-->
-    <main>
+    <main id="main-about" >
         <div id="msection-offer">
             <section id="section-whatweoffer">
                 <h2>What We Offer</h2>
