--- a/contact.html
+++ b/contact.html
@@ -57,67 +57,45 @@
     </header>
 
     <!--Main content-->
-    <main>
+    <main id="main-contact">
       <div id="contact">
         <section id="contact-address"><h2><strong>Address</strong></h2>
           <p>1 my street</p>
           <p>My village</p>
           <p>BOURNEMOUTH</p>
           <p>BH1 1AA</p></section>
-      
-      
-        <section id="contact-form">
-          <input type="email" name="formly" placeholder="Type in email" required>
-          <input type="password" name="formly" placeholder="Type in password" required>
-          <button>submit form</button></section>
+        <!--<section id="contact-form">
+          <form><input type="email" id="form" name="form" placeholder="Type in email" required>
+          <input type="password" id="form" name="form" placeholder="Type in password" required>
+          <button>submit form</button><form></section>-->
       </div>
-    <!-- Added hr element to seperate the footer and the the main element-->
-    <hr class="hrstyle" />
+      <!--Map
+      <div><section id="map-wrapper">
+        <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2487.7025099532634!2d-0.0405702!3d51.4268912!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760186c98465c5%3A0x77966a589a4b4367!2sSydenham%20Library!5e0!3m2!1sen!2suk!4v1699966631649!5m2!1sen!2suk" width="320px" height="450px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </section></div>-->
+    </main>
 
-    <!--Footer-->
-    <footer>
-      <div id="thefooter">
-        <h3 class="suii">Contact us</h3>
-        <ul id="ul2">
-          <li>
-            <a href="mail.to:kaizenfitness@kz.ac.uk">Email us</a
-            ><i class="fa-solid fa-envelope"></i>
-          </li>
-          <li>
-            <a href="tel:+4407756311939"
-              >Call us <i class="fa-solid fa-phone"></i
-            ></a>
-          </li>
-        </ul>
-      </div>
-      <div id="hefooter">
-        <h3 class="sui">Social Media links</h3>
-        <ul id="social-media">
-          <li>
-            <a
-              href="https://www.linkedin.com/in/abdiqani-warsame-2977a8255/"
-              target="_blank"
-              rel="noopener"
-              aria-label="Visit my linkelin page( opens in new tab)"
-              ><i class="fa-brands fa-linkedin"></i
-            ></a>
-          </li>
-          <li>
-            <a
-              href="https://github.com/yangkai004"
-              target="_blank"
-              rel="noopener"
-              aria-label="Visit my Github page (opens in new tab)"
-              ><i class="fa-brands fa-github"></i
-            ></a>
-          </li>
-        </ul>
-      </div>
-    </footer>
+      <!-- Added hr element to seperate the footer and the the main element-->
+      <hr class="hrstyle">
 
-    <script
-      src="https://kit.fontawesome.com/b49503b66d.js"
-      crossorigin="anonymous"
-    ></script>
+      <!--Footer-->
+      <footer>
+          <div id="thefooter">
+              <h3 class="suii">Contact us</h3>
+                <ul id="ul2">
+                  <li>
+                    <a href="mail.to:kaizenfitness@kz.ac.uk">Email us</a><i class="fa-solid fa-envelope"></i>
+                  </li>
+                  <li>
+                    <a href="tel:+4407756311939">Call us <i class="fa-solid fa-phone"></i></a>
+                  </li>
+                 </ul></div>
+          <div id="hefooter"><h3 class="sui">Social Media links</h3> 
+                <ul id="social-media">
+                  <li><a href="https://www.linkedin.com/in/abdiqani-warsame-2977a8255/" target="_blank" rel="noopener" aria-label="Visit my linkelin page( opens in new tab)"><i class="fa-brands fa-linkedin"></i></a></li>
+                  <li><a href="https://github.com/yangkai004" target="_blank" rel="noopener" aria-label="Visit my Github page (opens in new tab)"><i class="fa-brands fa-github"></i></a></li>
+                </ul></div></footer>
+    <script src="https://kit.fontawesome.com/b49503b66d.js" crossorigin="anonymous"></script>
   </body>
-</html>
+  </html>
+  
