--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </header>
 
   <!--Main content-->
-  <main>
+  <main id="main-index">
     <section id="hero-image">
       <div id="hero-section">
         <h1>Kaizen Fitness</h1>
