I worked on finishing the contact page and then made it responsive for any screen size device

--- a/contact.html
+++ b/contact.html
@@ -59,20 +59,20 @@
     <!--Main content-->
     <main id="main-contact">
       <div id="contact">
-        <section id="contact-address"><h2><strong>Address</strong></h2>
+        <section id="contact-address"><h2>Address</h2>
           <p>1 my street</p>
           <p>My village</p>
           <p>BOURNEMOUTH</p>
           <p>BH1 1AA</p></section>
-        <!--<section id="contact-form">
+        <section id="contact-form">
           <form><input type="email" id="form" name="form" placeholder="Type in email" required>
           <input type="password" id="form" name="form" placeholder="Type in password" required>
-          <button>submit form</button><form></section>-->
+          <button>submit form</button><form></section>
       </div>
-      <!--Map
+      <!--Map-->
       <div><section id="map-wrapper">
         <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2487.7025099532634!2d-0.0405702!3d51.4268912!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760186c98465c5%3A0x77966a589a4b4367!2sSydenham%20Library!5e0!3m2!1sen!2suk!4v1699966631649!5m2!1sen!2suk" width="320px" height="450px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </section></div>-->
+      </section></div>
     </main>
 
       <!-- Added hr element to seperate the footer and the the main element-->
