i worked on the responsiveness of all files and also added a explore further buttons  to the home page which link to the about page and also link to the contact us to the bottom of the  about page which links to the contact page

--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
     </section>
     </div>
     </section>
-
     <div id="section-grey">
       <section id="section-about">
         <h2>About kaizen fitness</h2>
@@ -67,6 +66,7 @@
           Kaizen Fitness is not just a gym it's a community that thrives on progress. Join us in sculpting a healthier,
           stronger, and happier version of yourself.
         </p>
+        <button><a href="about.html">Explore further</a></button>
       </section>
 
       <section id="section-qualification">
@@ -75,8 +75,9 @@
           journey. Each trainer brings a wealth of expertise, passion, and dedication to guide you towards your fitness
           goals. We believe in quality training, personalized for you. With our highly qualified trainers by your side,
           achieving your fitness aspirations becomes an inspiring and achievable reality.</p>
+          <button><a href="about.html">Explore further</a></button>
+      </section>
     </div>
-    </section>
   </main>
 
   <!-- Added hr element to seperate the footer and the the main element-->
