--- a/about.html
+++ b/about.html
@@ -34,10 +34,10 @@
 
     <!--Main content-->
     <main id="main-about" >
+        <section id="section-whatweoffer">
+            <h2>What We Offer</h2>
+        </section>
         <div id="msection-offer">
-            <section id="section-whatweoffer">
-                <h2>What We Offer</h2>
-            </section>
             <section id="section-offer">
                 <img src="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/images/Gym Equipment.avif" alt="">
                 <h3>Gym Equipment</h3>
@@ -59,7 +59,7 @@
                 <p>Fuel Your Success with Kaizen Fitness Nutrition Coaching! Discover a holistic approach to well-being with our nutrition coaching services. At Kaizen Fitness, we understand that true fitness extends beyond workouts, and nutrition plays a pivotal role. Our certified nutrition coaches work with you to create a personalized plan that aligns with your fitness goals, lifestyle, and dietary preferences. From meal planning to insightful guidance, we empower you to make sustainable, health-conscious choices. Elevate your journey to a healthier, more vibrant you with Kaizen Fitness Nutrition Coaching because good nutrition is the foundation of a stronger, happier life.</p>
             </section>
           </div>
-        <div>
+        <div id="faqs-control">
             <section id="faqs">
                 <details>
                   <summary>How do I sign up for a membership?</summary>
@@ -87,7 +87,10 @@
                 </details>
             </section>
         </div>
-    </main >
+        <div id="contact-button">
+            <button><a href="contact.html">Contact us</a></button>
+        </div>
+    </main>
 
     <!-- Added hr element to seperate the footer and the the main element-->
     <hr class="hrstyle">
