--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
                 <ul id="social-media">
                   <li><a href="https://www.linkedin.com/in/abdiqani-warsame-2977a8255/" target="_blank" rel="noopener" aria-label="Visit my linkelin page( opens in new tab)"><i class="fa-brands fa-linkedin"></i></a></li>
                   <li><a href="https://github.com/yangkai004" target="_blank" rel="noopener" aria-label="Visit my Github page (opens in new tab)"><i class="fa-brands fa-github"></i></a></li>
-                </ul></div></footer>
+                </ul></div></footer></div>
     <script src="https://kit.fontawesome.com/b49503b66d.js" crossorigin="anonymous"></script>
   </body>
   </html>
