I added a video to the about page and made it responsive

--- a/about.html
+++ b/about.html
@@ -58,7 +58,12 @@
                 <h3>NUTRITIONAL COACHING</h3>
                 <p>Fuel Your Success with Kaizen Fitness Nutrition Coaching! Discover a holistic approach to well-being with our nutrition coaching services. At Kaizen Fitness, we understand that true fitness extends beyond workouts, and nutrition plays a pivotal role. Our certified nutrition coaches work with you to create a personalized plan that aligns with your fitness goals, lifestyle, and dietary preferences. From meal planning to insightful guidance, we empower you to make sustainable, health-conscious choices. Elevate your journey to a healthier, more vibrant you with Kaizen Fitness Nutrition Coaching because good nutrition is the foundation of a stronger, happier life.</p>
             </section>
-          </div>
+        </div>
+
+        <div id="video">
+          <video src="assests/videos/Kaizen Fitness.mp4" controls muted loop></video>
+        </div>
+
         <div id="faqs-control">
             <section id="faqs">
                 <details>
@@ -98,17 +103,15 @@
     <!--Footer-->
     <footer>
         <div id="thefooter">
-            <h3 class="suii">Contact us</h3>
-              <ul id="ul2">
-                <li>
-                  <a href="mail.to:kaizenfitness@kz.ac.uk">Email us</a><i class="fa-solid fa-envelope"></i>
-                </li>
-                <li>
-                  <a href="tel:+4407756311939">Call us <i class="fa-solid fa-phone"></i></a>
-                </li>
-               </ul></div>
-        <div id="hefooter"><h3 class="sui">Social Media links</h3> 
+            
+        <div id="thefooter">
               <ul id="social-media">
+                <li>
+                    <a href="mail.to:kaizenfitness@kz.ac.uk"></a><i class="fa-solid fa-envelope"></i>
+                </li>
+                <li>
+                    <a href="tel:+4407756311939"><i class="fa-solid fa-phone"></i></a>
+                </li>
                 <li><a href="https://www.linkedin.com/in/abdiqani-warsame-2977a8255/" target="_blank" rel="noopener" aria-label="Visit my linkelin page( opens in new tab)"><i class="fa-brands fa-linkedin"></i></a></li>
                 <li><a href="https://github.com/yangkai004" target="_blank" rel="noopener" aria-label="Visit my Github page (opens in new tab)"><i class="fa-brands fa-github"></i></a></li>
               </ul></div>
