I added and made adjustments to may things like the footer i changed the color and made it responsive, i worked more on the responsiveness of different pages i used something new i learnt to make the images in the about page responsive equal sized height images using aspect ratio and display grid i added small things like hover to buttons and nav items i shortand the code by formatting it and removing unnessassary code and by giving different elements the same id

--- a/about.html
+++ b/about.html
@@ -39,24 +39,24 @@
         </section>
         <div id="msection-offer">
             <section id="section-offer">
-                <img src="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/images/Gym Equipment.avif" alt="">
-                <h3>Gym Equipment</h3>
-                <p>Elevate Your Workouts with State-of-the-Art Gym Equipment at Kaizen Fitness! Our fitness haven is equipped with cutting-edge gym equipment designed to enhance every aspect of your training. From cardio machines to strength training apparatus, our carefully curated selection ensures you have the tools to push your limits and achieve your fitness goals. Experience the synergy of technology and performance in a dynamic environment where every rep counts. Join Kaizen Fitness and unleash the full potential of your workouts with the latest and most advanced gym equipment available.</p>
+                <img id="img-aspect" src="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/images/Gym Equipment.avif" alt="">
+                <h3>GYM Equipment</h3>
+                <p> At Kaizen Fitness, our cutting-edge gym gear elevates your workouts. Our carefully curated selection maximizes every training aspect, merging technology and performance for impactful results.</p>
             </section>
             <section id="section-offer">
-                <img src="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/images/fitness assessment.jpeg" alt="">
+                <img id="img-aspect" src="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/images/fitness assessment.jpeg" alt="">
                 <h3>FITNESS ASSESSMENTS</h3>
-                <p>At Kaizen Fitness, we believe in tailoring your fitness journey to your unique needs. Our thorough fitness assessments go beyond the surface, providing a detailed understanding of your strengths, areas for improvement, and personalized goals. By combining cutting-edge assessments with expert guidance, we pave the way for a targeted and effective fitness plan designed just for you. Take the first step towards a healthier you with our transformative fitness assessments at Kaizen Fitness.</p>
+                <p>Experience in-depth fitness assessments at Kaizen Fitness. Our detailed analysis uncovers your strengths, areas for improvement, and personalized goals, paving the way for a customized fitness plan exclusively for you.</p>
             </section>
             <section id="section-offer">
-                <img src="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/images/personal training.jpeg" alt="">
+                <img id="i  mg-aspect"  src="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/images/personal training.jpeg" alt="">
                 <h3>PERSONAL TRAINING</h3>
-                <p>Experience Personalized Excellence with Kaizen Fitness Personal Training! Elevate your fitness journey with our dedicated personal training sessions, where our certified trainers tailor every workout to match your goals, fitness level, and preferences. At Kaizen Fitness, we believe in the power of individualized guidance, ensuring each session is a step towards your unique fitness aspirations. Our experienced trainers bring motivation, expertise, and a personalized touch to every workout, creating a supportive environment where your success becomes inevitable. Unleash your potential with Kaizen Fitness Personal Training because your fitness journey is as unique as you are.</p>
+                <p>Kaizen Fitness Personal Training offers tailored sessions guided by certified trainers. Every workout aligns with your goals, fitness level, and preferences, ensuring personalized progress and success.</p>
             </section>
             <section id="section-offer">
-                <img src="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/images/nutrition coaching.jpeg" alt="">
+                <img id="img-aspect"  src="/Users/abdiqaniwarsame/Documents/GitHub/Kaizen_fitness/assests/images/nutrition coaching.jpeg" alt="">
                 <h3>NUTRITIONAL COACHING</h3>
-                <p>Fuel Your Success with Kaizen Fitness Nutrition Coaching! Discover a holistic approach to well-being with our nutrition coaching services. At Kaizen Fitness, we understand that true fitness extends beyond workouts, and nutrition plays a pivotal role. Our certified nutrition coaches work with you to create a personalized plan that aligns with your fitness goals, lifestyle, and dietary preferences. From meal planning to insightful guidance, we empower you to make sustainable, health-conscious choices. Elevate your journey to a healthier, more vibrant you with Kaizen Fitness Nutrition Coaching because good nutrition is the foundation of a stronger, happier life.</p>
+                <p>Fuel your journey to a healthier you with Kaizen Fitness Nutrition Coaching. Our certified coaches craft personalized nutrition plans that harmonize with your goals, lifestyle, and dietary choices, fostering sustainable health and vitality.</p>
             </section>
         </div>
 
@@ -106,14 +106,14 @@
             
         <div id="thefooter">
               <ul id="social-media">
-                <li>
-                    <a href="mail.to:kaizenfitness@kz.ac.uk"></a><i class="fa-solid fa-envelope"></i>
+                <li id="ankara">
+                    <a href="mail.to:kaizenfitness@kz.ac.uk"  target="_blank" rel="noopener" aria-label="Contant us on email( opens on email)"></a><i class="fa-solid fa-envelope"></i>
                 </li>
-                <li>
-                    <a href="tel:+4407756311939"><i class="fa-solid fa-phone"></i></a>
+                <li id="ankara">
+                    <a href="tel:+4407756311939" target="_blank" rel="noopener" aria-label="CAll US"><i class="fa-solid fa-phone"></i></a>
                 </li>
-                <li><a href="https://www.linkedin.com/in/abdiqani-warsame-2977a8255/" target="_blank" rel="noopener" aria-label="Visit my linkelin page( opens in new tab)"><i class="fa-brands fa-linkedin"></i></a></li>
-                <li><a href="https://github.com/yangkai004" target="_blank" rel="noopener" aria-label="Visit my Github page (opens in new tab)"><i class="fa-brands fa-github"></i></a></li>
+                <li id="ankara"><a href="https://www.linkedin.com/in/abdiqani-warsame-2977a8255/" target="_blank" rel="noopener" aria-label="Visit my linkelin page( opens in new tab)"><i class="fa-brands fa-linkedin"></i></a></li>
+                <li id="ankara"><a href="https://github.com/yangkai004" target="_blank" rel="noopener" aria-label="Visit my Github page (opens in new tab)"><i class="fa-brands fa-github"></i></a></li>
               </ul></div>
 </footer>
 <script src="https://kit.fontawesome.com/b49503b66d.js" crossorigin="anonymous"></script>
