--- a/contact.html
+++ b/contact.html
@@ -78,23 +78,23 @@
       <!-- Added hr element to seperate the footer and the the main element-->
       <hr class="hrstyle">
 
-      <!--Footer-->
-      <footer>
-          <div id="thefooter">
-              <h3 class="suii">Contact us</h3>
-                <ul id="ul2">
-                  <li>
-                    <a href="mail.to:kaizenfitness@kz.ac.uk">Email us</a><i class="fa-solid fa-envelope"></i>
-                  </li>
-                  <li>
-                    <a href="tel:+4407756311939">Call us <i class="fa-solid fa-phone"></i></a>
-                  </li>
-                 </ul></div>
-          <div id="hefooter"><h3 class="sui">Social Media links</h3> 
-                <ul id="social-media">
-                  <li><a href="https://www.linkedin.com/in/abdiqani-warsame-2977a8255/" target="_blank" rel="noopener" aria-label="Visit my linkelin page( opens in new tab)"><i class="fa-brands fa-linkedin"></i></a></li>
-                  <li><a href="https://github.com/yangkai004" target="_blank" rel="noopener" aria-label="Visit my Github page (opens in new tab)"><i class="fa-brands fa-github"></i></a></li>
-                </ul></div></footer></div>
+
+    <!--Footer-->
+    <footer>
+      <div id="thefooter">
+          
+      <div id="thefooter">
+            <ul id="social-media">
+              <li id="ankara">
+                  <a href="mail.to:kaizenfitness@kz.ac.uk"  target="_blank" rel="noopener" aria-label="Contant us on email( opens on email)"></a><i class="fa-solid fa-envelope"></i>
+              </li>
+              <li id="ankara">
+                  <a href="tel:+4407756311939" target="_blank" rel="noopener" aria-label="CAll US"><i class="fa-solid fa-phone"></i></a>
+              </li>
+              <li id="ankara"><a href="https://www.linkedin.com/in/abdiqani-warsame-2977a8255/" target="_blank" rel="noopener" aria-label="Visit my linkelin page( opens in new tab)"><i class="fa-brands fa-linkedin"></i></a></li>
+              <li id="ankara"><a href="https://github.com/yangkai004" target="_blank" rel="noopener" aria-label="Visit my Github page (opens in new tab)"><i class="fa-brands fa-github"></i></a></li>
+            </ul></div>
+</footer>
     <script src="https://kit.fontawesome.com/b49503b66d.js" crossorigin="anonymous"></script>
   </body>
   </html>
