--- a/index.html
+++ b/index.html
@@ -61,20 +61,13 @@
     <div id="section-grey">
       <section id="section-about">
         <h2>About kaizen fitness</h2>
-        <p>Welcome to Kaizen Fitness, where our fitness journey began in year 1980 by miyomutoto musashi. Our commitment
-          to your well-being goes beyond just workouts. The word Kaizen is a philosophy of continuous improvement.
-          Kaizen Fitness is not just a gym it's a community that thrives on progress. Join us in sculpting a healthier,
-          stronger, and happier version of yourself.
-        </p>
+        <p>Welcome to Kaizen Fitness, where our fitness journey began in 1980. We're more than a gym; we're a community dedicated to continuous improvement. Join us in sculpting a healthier, stronger, and happier version of yourself.</p>
         <button><a href="about.html">Explore further</a></button>
       </section>
 
-      <section id="section-qualification">
-        <h2>Highly Qualified Trainers</h2>
-        <p>At Kaizen Fitness, our team of trainers is more than just instructors they are mentors on your fitness
-          journey. Each trainer brings a wealth of expertise, passion, and dedication to guide you towards your fitness
-          goals. We believe in quality training, personalized for you. With our highly qualified trainers by your side,
-          achieving your fitness aspirations becomes an inspiring and achievable reality.</p>
+      <section id="section-about">
+        <h2>About kaizen fitness</h2>
+        <p>Welcome to Kaizen Fitness, where our fitness journey began in 1980. We're more than a gym; we're a community dedicated to continuous improvement. Join us in sculpting a healthier, stronger, and happier version of yourself.</p>
           <button><a href="about.html">Explore further</a></button>
       </section>
     </div>
@@ -83,33 +76,23 @@
   <!-- Added hr element to seperate the footer and the the main element-->
   <hr class="hrstyle" />
 
-  <!--Footer-->
-  <footer>
-    <div id="thefooter">
-      <h3 class="suii">Contact us</h3>
-      <ul id="ul2">
-        <li>
-          <a href="mail.to:kaizenfitness@kz.ac.uk">Email us</a><i class="fa-solid fa-envelope"></i>
-        </li>
-        <li>
-          <a href="tel:+4407756311939">Call us <i class="fa-solid fa-phone"></i></a>
-        </li>
-      </ul>
-    </div>
-    <div id="hefooter">
-      <h3 class="sui">Social Media links</h3>
-      <ul id="social-media">
-        <li>
-          <a href="https://www.linkedin.com/in/abdiqani-warsame-2977a8255/" target="_blank" rel="noopener"
-            aria-label="Visit my linkelin page( opens in new tab)"><i class="fa-brands fa-linkedin"></i></a>
-        </li>
-        <li>
-          <a href="https://github.com/yangkai004" target="_blank" rel="noopener"
-            aria-label="Visit my Github page (opens in new tab)"><i class="fa-brands fa-github"></i></a>
-        </li>
-      </ul>
-    </div>
-  </footer>
 
+    <!--Footer-->
+    <footer>
+      <div id="thefooter">
+          
+      <div id="thefooter">
+            <ul id="social-media">
+              <li id="ankara">
+                  <a href="mail.to:kaizenfitness@kz.ac.uk"  target="_blank" rel="noopener" aria-label="Contant us on email( opens on email)"></a><i class="fa-solid fa-envelope"></i>
+              </li>
+              <li id="ankara">
+                  <a href="tel:+4407756311939" target="_blank" rel="noopener" aria-label="CAll US"><i class="fa-solid fa-phone"></i></a>
+              </li>
+              <li id="ankara"><a href="https://www.linkedin.com/in/abdiqani-warsame-2977a8255/" target="_blank" rel="noopener" aria-label="Visit my linkelin page( opens in new tab)"><i class="fa-brands fa-linkedin"></i></a></li>
+              <li id="ankara"><a href="https://github.com/yangkai004" target="_blank" rel="noopener" aria-label="Visit my Github page (opens in new tab)"><i class="fa-brands fa-github"></i></a></li>
+            </ul></div>
+    </footer>
+    <script src="https://kit.fontawesome.com/b49503b66d.js" crossorigin="anonymous"></script>
 </body>
 </html>
