I did a slight zoom effect when hovered over the about page images in the card format i added hover effect for icons in the footer i also added several comments all over my css of the code i already did

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
       </section>
 
       <section id="section-about">
-        <h2>About kaizen fitness</h2>
-        <p>Welcome to Kaizen Fitness, where our fitness journey began in 1980. We're more than a gym; we're a community dedicated to continuous improvement. Join us in sculpting a healthier, stronger, and happier version of yourself.</p>
+        <h2>Highly Qualified Trainers</h2>
+        <p>At Kaizen Fitness, our trainers go beyond instruction; they're mentors, dedicated to guiding your fitness journey. Their expertise ensures personalized training, turning your goals into an inspiring reality.</p>
           <button><a href="about.html">Explore further</a></button>
       </section>
     </div>
