I made adjustments to the id's in form elements in contact page to improve the performance of the website i also made adjustments to the footer the email  icon had problems in the html part so i fixed it

--- a/contact.html
+++ b/contact.html
@@ -65,8 +65,8 @@
           <p>BOURNEMOUTH</p>
           <p>BH1 1AA</p></section>
         <section id="contact-form">
-          <form><input type="email" id="form" name="form" placeholder="Type in email" required>
-          <input type="password" id="form" name="form" placeholder="Type in password" required>
+          <form><input type="email" id="form-email" name="form" placeholder="Type in email" required>
+          <input type="password" id="form-password" name="form" placeholder="Type in password" required>
           <button>submit form</button><form></section>
       </div>
       <!--Map-->
@@ -86,7 +86,7 @@
       <div id="thefooter">
             <ul id="social-media">
               <li id="ankara">
-                  <a href="mail.to:kaizenfitness@kz.ac.uk"  target="_blank" rel="noopener" aria-label="Contant us on email( opens on email)"></a><i class="fa-solid fa-envelope"></i>
+                  <a href="mailto:kaizenfitness@kz.ac.uk"  target="_blank" rel="noopener" aria-label="Contant us on email( opens on email)"><i class="fa-solid fa-envelope"></i></a>
               </li>
               <li id="ankara">
                   <a href="tel:+4407756311939" target="_blank" rel="noopener" aria-label="CAll US"><i class="fa-solid fa-phone"></i></a>
