--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div id="thefooter">
             <ul id="social-media">
               <li id="ankara">
-                  <a href="mail.to:kaizenfitness@kz.ac.uk"  target="_blank" rel="noopener" aria-label="Contant us on email( opens on email)"></a><i class="fa-solid fa-envelope"></i>
+                  <a href="mailto:kaizenfitness@kz.ac.uk"  target="_blank" rel="noopener" aria-label="Contant us on email( opens on email)"><i class="fa-solid fa-envelope"></i></a>
               </li>
               <li id="ankara">
                   <a href="tel:+4407756311939" target="_blank" rel="noopener" aria-label="CAll US"><i class="fa-solid fa-phone"></i></a>
